first push to github

--- a/practice1.html
+++ b/practice1.html
@@ -50,6 +50,16 @@
 <div class="content">
 <a href="index.html">BACK TO INDEX</a>
 <table>
+<tr>
+<th>
+<img src="img/ugly.jpg" alt="WIDE HARRY" height="100" width="100" style="display: block">
+</th>
+<th>
+<h2 class="tabbed">HARRY WANG</h2>
+<h3 class="tabbed">contact me: h334w620@ku.edu</h3>
+</th>
+</tr>
+
 
 <tr>
 <th><h2>Work Experience<h2></th>
@@ -212,9 +222,9 @@ VIRT-Manager</li>
 
 <tr>
 <th>
-<iframe src="https://youtu.be/qmpuvHrs5zE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="560" height="auto" frameborder="0"></iframe>
+<iframe src="https://www.youtube.com/embed/qmpuvHrs5zE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
 <ul>
-<li>SourceAmerica Design Challenge: 2019- 2020 (https://youtu.be/qmpuvHrs5zE)</li>
+<li>SourceAmerica Design Challenge: 2019- 2020 (https://youtube.com/qmpuvHrs5zE)</li>
 <li>Technology Student Association: 2019 – 2020</li>
 <li>Greater Kansas City Science & Engineering Fair: 2018 – 2019</li>
 </ul>
